# maui-shelf

./: .gitignore  CMakeLists.txt  Messages.sh  library.pro  org.kde.shelf.desktop  org.kde.shelf.metainfo.xml  shelf.pro
android_files/: AndroidManifest.xml  build.gradle
cmake-bk/: FindPoppler.cmake
plugins/: CMakeLists.txt
plugins/epub/: epub.pri  epubreader.h
plugins/epub/quazip/: quazip.pri
plugins/poppler/: CMakeLists.txt  ShelfPopplerConfig.cmake.in
plugins/poppler/src/: CMakeLists.txt  img_assets.qrc  resources.qrc
plugins/poppler/src/code/: pdfdocument.cpp  pdfdocument.h  pdfimageprovider.cpp  pdfimageprovider.h  pdftocmodel.cpp  pdftocmodel.h  shelfpoppler_plugin.cpp  shelfpoppler_plugin.h  thumbnailer.cpp  thumbnailer.h
plugins/poppler/src/controls/: PDFViewer.qml  qmldir
plugins/poppler/src/data/fonts/: fonts.qrc
po/ar/: shelf.po
po/ca/: shelf.po
po/ca@valencia/: shelf.po
po/cs/: shelf.po
po/de/: shelf.po
po/en_GB/: shelf.po
po/eo/: shelf.po
po/es/: shelf.po
po/eu/: shelf.po
po/fi/: shelf.po
po/fr/: shelf.po
po/ga/: shelf.po
po/gl/: shelf.po
po/he/: shelf.po
po/hi/: shelf.po
po/hu/: shelf.po
po/it/: shelf.po
po/ja/: shelf.po
po/ka/: shelf.po
po/ko/: shelf.po
po/lt/: shelf.po
po/lv/: shelf.po
po/my/: shelf.po
po/nl/: shelf.po
po/nn/: shelf.po
po/pa/: shelf.po
po/pl/: shelf.po
po/pt/: shelf.po
po/pt_BR/: shelf.po
po/sa/: shelf.po
po/sk/: shelf.po
po/sl/: shelf.po
po/sv/: shelf.po
po/tr/: shelf.po
po/ug/: shelf.po
po/uk/: shelf.po
po/zh_CN/: shelf.po
po/zh_TW/: shelf.po
src/: CMakeLists.txt  fuck.cpp  fuck.h  lib.h  lib_assets.qrc  library.cpp  library.h  main.cpp  main.qml  org.maui.shelf.desktop  qml.qrc
src/PDFViewer/: pdfdocument.cpp  pdfdocument.h  pdfviewer.cpp  pdfviewer.h  polynomial.cpp  polynomial.h  poppler.pri
src/PDFViewer/poppler-qml-plugin/: CMakeLists.txt  pdfdocument.cpp  pdfdocument.h  pdfimageprovider.cpp  pdfitem.cpp  pdftocmodel.h  poppler-plugin.pri  verticalview.cpp  verticalview.h
src/android/: AndroidManifest.xml  build.gradle
src/android/res/values/: strings.xml
src/android/res/xml/: filepaths.xml
src/db/: db.cpp  db.h  dbactions.cpp  dbactions.h  fileloader.h  script.sql
src/epubreader/: .CMakeLists.txt.kate-swp  cbzreader.h  epubreader.cpp
src/models/: placesmodel.cpp  placesmodel.h
src/models/cloud/: cloud.cpp  cloud.h
src/server/: server.cpp  server.h
src/views/: SettingsDialog.qml
src/views/Viewer/: Viewer.qml  Viewer_CB.qml  Viewer_EPUB.qml  Viewer_PDF.qml  Viewer_TXT.qml  WebView.qml  WebView_Android.qml
src/views/Viewer/pdfjs/: main.html  script.js
src/views/cloud/: CloudView.qml
